# bsaber-playlist-collector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
bsaber_playlist_collector/: main.py
