[tool.poetry]
name = "bsaber-playlist-collector"
version = "0.1.1"
description = " A tool to collect and download all official and community playlists from bsaber.com "
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
progress = "^1.6"
bs4 = "^0.0.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bsaber-playlist-collector = "bsaber_playlist_collector.main:main"
